--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "",
-    "build": "babel --presets es2015 src -w -d build",
+    "buildWatch": "babel --presets es2015 src -w -d build",
+    "build": "babel --presets es2015 src -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Johnny Carmona",
